fix(personal-data): add gap between spinner and text on button loading

--- a/src/components/user-profile/components/personal-data/personal-data.module.scss
+++ b/src/components/user-profile/components/personal-data/personal-data.module.scss
@@ -47,4 +47,8 @@
       }
     }
   }
+
+  &_loading {
+    column-gap: 14.5px;
+  }
 }
